--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/book/static/index.html">阅读统计</a></li>
             <li><a href="/book/static/addBook.html">添加阅读记录</a></li>
+            <li><a href="/book/static/his.html">阅读记录</a></li>
           </ul>
         </div>
       </div>
